unpackaged/main/default/objects/Account/fields/Brokerage__c.field-meta.xml
<CustomField>
    <fullName>Brokerage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brokerage</label>
    <referenceTo>Brokerage__c</referenceTo>
    <relationshipLabel>Property Accounts</relationshipLabel>
    <relationshipName>PropertyAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>