unpackaged/main/default/objects/Account/fields/SB_Test_Field__c.field-meta.xml
<CustomField>
    <fullName>SB_Test_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SB Test Field</label>
    <type>Checkbox</type>
</CustomField>