unpackaged/main/default/objects/Account/fields/Selling_Agent__c.field-meta.xml
<CustomField>
    <fullName>Selling_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selling Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Properties_Selling</relationshipName>
    <type>Lookup</type>
</CustomField>