unpackaged/main/default/objects/Account/recordTypes/Property_Account.recordType-meta.xml
<RecordType>
    <fullName>Property_Account</fullName>
    <active>true</active>
    <label>Property Account</label>
</RecordType>