unpackaged/main/default/objects/Account/listViews/Property_Accounts.listView-meta.xml
<ListView>
    <fullName>Property_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Brokerage__c</columns>
    <columns>Selling_Agent__c</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.ADDRESS2_STREET</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Property_Account</value>
    </filters>
    <label>Property Accounts</label>
</ListView>